--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="YEp28zWd165QktENlIuKEV7E6-4_M8smkZ-i-smKVYY" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vegas Sweeps 777: Your Ultimate Guide to Earning Real Cash from Home</title>
